ECA-2263: Added authentication parsing to all CLI command classes. Username and password are parsed using the -u and -p flags, and if not supplied they are supplanted with the default CLI user if allowed. Tested that code builds and all tests run.  AlwaysAllowAuthenticationToken is still nerfed.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@12688 37aeb1de-b14b-0410-9a0e-82b28170d228